--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									
 									<h2><a href="#">My name is Jahmel Yorke</a></h2>
-									<p>I am a passionate and self motivated, aspiring Junior developer. I enrolled in IBG Technical Institute bootcamp where I learned the fundamentals of Software Developement. I look forward to incorporating more versatility in my technical skills and ultimately tackle more intricate projects. All personal projects shown below are created by me.</p>
+									<p>I am a passionate and motivated Software developer. I enrolled in IBG Technical Institute bootcamp where I learned the fundamentals of Software Developement. I look forward to incorporating more versatility in my technical skills and ultimately tackle more intricate projects. All personal projects shown below are created by me.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/Wave Game.png" alt="" /></a>
 								<ul class="actions special">
