--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="sodaina boken.html">Project 2<br />
+										<h2><a href="coronavirus-tracker.html">Project 2<br />
 											Click here to see project</a></h2>
 									
 									</header>
-									<a href="#" class="image fit"><img src="images/Japanese Adventure.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Coronavirus-Tracker.png" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Jahdar49/Sodaina-Boken" class="button">Click here to see code</a></li>
+										<li><a href="https://github.com/Jahdar49/coronavirus-tracker" class="button">Click here to see code</a></li>
 									</ul>
 								</article>
 								
